# qnav

./: .gitignore  CHANGELOG.md  LICENSE  README.md  api_manifest.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
.serena/: project.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/conventions/: index.html
0.1.0/getting_started/: index.html
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/conventions/: index.html
0.2.0/getting_started/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/conventions/: index.html
0.3.0/getting_started/: index.html
0.3.0/search/: search_index.json
__data/: math.md
__data/Efficient Attitude Estimators A Tutorial and Survey/: attitudesurvey.bbl  attitudesurvey.bib  attitudesurvey.tex
__data/Special Orthogonal Group SO(3), Euler Angles, Angle-axis, Rodriguez Vector and Unit-Quaternion: Overview, Mapping and Challenges/: Fig_EX1_1.eps  Fig_EX1_2.eps  Fig_EX1_3.eps  Fig_EX1_31.eps  Fig_EX1_4.eps  Fig_EX2_1.eps  Fig_EX2_2.eps  Fig_EX2_3.eps  Fig_EX2_4.eps  Fig_EX2_41.eps  Fig_EX2_5.eps  IEEEtran.cls  Keywords.txt  Paper_Hashim_SUBMIT.bbl  Paper_Hashim_SUBMIT.lot  Paper_Hashim_SUBMIT.tex  Paper_Hashim_SUBMIT.toc  Replace.txt  acsauth.cls  bib_Overview_SO3.bib  cta-author.cls  elsarticle.cls  tSYS2e.cls
__data/Using Inertial Sensors for Position and Orientation Estimation/: tutorialPaper.bbl  tutorialPaper.glo  tutorialPaper.gls
benchmarks/: results.json  run_benchmarks.py  run_dataset_eval.py
docs/: conventions.md  getting_started.md  index.md
docs/api/: calibration.md  covariance.md  dcm.md  determination.md  euler.md  filters.md  frames.md  geomag.md  heading.md  highlevel.md  jacobians.md  kinematics.md  metrics.md  quaternion.md  sensors.md  simulation.md  so3.md
docs/design/: api_principles.md  performance.md
docs/javascripts/: mathjax.js
docs/math/: attitude_determination.md  euler_angles.md  filtering.md  formula_catalog.md  frames.md  heading.md  quaternions.md  so3.md
docs/stylesheets/: extra.css
qnav/: __init__.py  _validate.py  errors.py  highlevel.py  types.py
qnav/attitude/: __init__.py  conversions.py  covariance.py  dcm.py  euler.py  interpolation.py  jacobians.py  kinematics.py  mrp.py  quaternion.py  rotvec.py  so3.py
qnav/calibration/: __init__.py  accel_calibration.py  frame_alignment.py  gyro_bias.py  lever_arm.py  mag_ellipsoid.py  observability.py  soft_hard_iron.py  temperature.py  time_offset.py
qnav/determination/: __init__.py  davenport.py  famc.py  flae.py  fqa.py  oleq.py  quest.py  saam.py  svd.py  triad.py  wahba.py
qnav/filters/: __init__.py  _kalman.py  aqua.py  base.py  complementary.py  contracts.py  ekf.py  eskf.py  fkf.py  fourati.py  invariant.py  madgwick_style.py  mahony_style.py  pipeline.py  robust.py  roleq.py  ukf.py
qnav/frames/: __init__.py  aerospace.py  conventions.py  core.py  earth.py  graph.py  robotics.py  transforms.py  vehicle.py
qnav/geomag/: __init__.py  _wmm2025.py  (+1 more)
tests/: conftest.py  test_advanced_estimators.py  test_api_manifest.py  test_calibration_extended.py  test_calibration_sensors_sim.py  test_contracts.py  test_conversions.py  test_dataset_eval.py  test_determination.py  test_doc_examples.py  test_filters.py  test_frames.py  test_geomag.py  test_heading.py  test_highlevel.py  test_interop.py  test_jacobians_covariance.py  test_kinematics.py  test_measurements.py  test_nav.py  test_new_estimators.py  test_pipeline.py  test_preintegration.py  test_public_api.py  test_quaternion.py  test_real_data.py  test_robust.py  test_so3.py  test_validate.py
(+1138 files in other folders)
